--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -3,6 +3,12 @@
 	src: url('../fonts/aaargh/aaargh_normal_macroman/Aaargh-webfont.woff') format('woff');
 }
 
+@font-face{
+	font-family: 'Pier';
+	src: url('../fonts/pier.otf') format('opentype');
+}
+
+
 #data-stories-menu.pure-menu {
   background-color: rgb(61, 79, 93);
   border: none;
@@ -26,7 +32,6 @@ h2.brand-tagline {
   color: #52bcc0;
 }
 
-
 .content-header h1 {
   color: rgb(97, 126, 148);
 }
@@ -34,6 +39,10 @@ h2.brand-tagline {
 div#ng-view * {
   font-family: Aaargh, sans-serif;
   line-height: 1.5em;
+}
+
+div#ng-view h2, div#ng-view h1 {
+  font-family: Pier;
 }
 
 /* about page */
@@ -57,3 +66,63 @@ div#ng-view * {
   margin-bottom: 10px;
   border-radius: 10%;
 }
+
+
+/* project page */
+
+.project-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+.project-header h1 {
+  flex: 0 1 auto;
+  border-right: 1px solid #eeeeee;
+  padding-right: 0.3em;
+}
+
+
+.project-header-details {
+  flex: 1;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.project-header-details p {
+  margin: 0;
+}
+
+.project-header-details .subdued {
+  color: #aaaaaa;
+}
+
+.project-title {
+  font-weight: bold;
+  font-size: 2.5em;
+  display: inline-block;
+  margin-right: 0.5em;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
