--- a/web/static/templates/project.html
+++ b/web/static/templates/project.html
@@ -15,7 +15,7 @@
     </div>
   </div>
 
-  <section class="post" ng-repeat="post in project.posts">
+  <section class="post" ng-repeat="post in project.posts | orderBy:'created':true">
     <header class="post-header">
       <!-- <img class="post-avatar" alt="Eric Ferraiuolo&#x27;s avatar" height="48" width="48" src="img/common/ericf-avatar.png"> -->
       <h2 class="post-title" go-click="{{post.url}}"> {{::post.title}} </h2>
